[metadata]
name = noterm
author = fallnjump
author_email = tfjsm.app@gmail.com
version = attr: noterm.__version__
license = LICENSE
description = notebook-terminal application
long_description = file: README_jp.md

[options]
packages = find:
include_package_data=True
install_requires =
    numpy
    opencv-python
    glob2

#[options.extras_require]
#develop =
#    

[options.entry_points]
console_scripts =
    noterm = noterm:run

